<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/login_intro" />

        <EditText
            android:id="@+id/instanceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="64dp"
            android:textSize="20sp"
            android:inputType="textUri"
            android:autofillHints="username"
            android:importantForAutofill="no"
            android:hint="@string/instance_hint" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/VoiceButton"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/loginStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
